# iter-flow-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: flow.rs
src/: and_then.rs  flatten.rs  lib.rs  map_err.rs  map_ok.rs
