[package]
name = "iter-flow"
description = "Functional programming utilities for Rust"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
keywords = ["iterator", "iter", "flow", "declarative", "functional"]
categories = ["development-tools", "no-std::no-alloc", "rust-patterns"]
repository = "https://github.com/lasantosr/iter-flow-rs/"

[features]
default = ["use_alloc"]
use_alloc = []

[dev-dependencies]
anyhow = "1"
